Expand dashboard charts
